# adaptive-regression

./: .gitignore  README.md  analyze.py  config.py  experiment.py  game.py  generate_mp4s.py  isofitts.py  main.py  models.py  notes.txt  pyproject.toml  run_online_validation.py  screen_guided_training.py  stream.py  test.py  utils.py  validate_online.py
Data/subject1000/: collection_details.json
images/close-pro-open-sup/: collection.txt
src/: data_collection.py  logging.py
utils/: adaptation.py  data_collection.py  fitts.py  losses.py  metrics.py  models.py  plotting.py  preprocessing.py
