[project]
name = "adaptive-regression"
version = "0.1.0"
description = "Source code for publication on context-informed incremental learning in regression-based myoelectric control."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "libemg==2.0", # exact commit during data collection: 7b4a727a2c95e29b354f3f25f251fcace0c8b62d
    "matplotlib==3.8",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]
